--- a/src/components/FAQ/FAQ.css
+++ b/src/components/FAQ/FAQ.css
@@ -1,30 +1,45 @@
 .faq-container{
-    width: 100%;
-    height: auto;
+    display: flex;
+    flex-direction: column;
+    
+    justify-content: center;
+    align-items: center;
     background-color: #484283;
     color:#FFFFFF; 
 }
-.faq-title{
+.faq-box{
+    width: 880px;
+    height: auto;
 }
 .faq-content {
     list-style: none;
+    padding: 0;
 }
 .faq-item{
     margin-top: -1px;
     border-top:1px solid #FFFFFF;
     border-bottom: 1px solid #FFFFFF;
+    display: grid;
+    grid-template-columns: 1fr 20px;
+    justify-content: center;
+    align-items: center;
 }
 .faq-question {
-
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 30px;
 }
 .faq-button-show {
     width: 20px;
     height: 20px;
+    cursor: pointer;
     background: url("../../assets/Button.svg") 50% 50% no-repeat;
 }
 .faq-button-show.button-show {
     transform: rotate(45deg);
 }
 .faq-answer {
-
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 30px;
 }
