--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -3,11 +3,10 @@
     max-width: 100%;
     margin: 0;    
     background-color: #444B58;
-    position: fixed;
+    position: relative;
     left: 0;
     right: 0;
     bottom: 0;
-    z-index: 10;
 }
 .footer-box {
     display: grid;
