--- a/src/components/SearchInput/SearchInput.css
+++ b/src/components/SearchInput/SearchInput.css
@@ -1,13 +1,14 @@
 .search-input {
     width: 100%;
     height: 62px;
-    padding: 20px;
+    margin: 20px 0;
     font-weight: 400;
     font-size: 16px;
     color: #B2B5BB;
-    border-radius: 6px;
+    border-radius: 4px;
     background-color: #F6F6F6;
-    border:1px solid #F6F6F6
+    border:1px solid #F6F6F6;
+    padding: 0px 20px;
 }
 .search-input:focus {
     outline: none;
