--- a/src/components/Catalog/Catalog.css
+++ b/src/components/Catalog/Catalog.css
@@ -1,5 +1,8 @@
 .catalog-container {
+    display: flex;
+    flex-direction: column;
     margin: 0 100px;
+    width: 1180px;
 }
 .catalog-title {
     font-weight: 700;
@@ -11,15 +14,44 @@
     list-style: none;
 	display: grid;
     width: 100%;
-	grid-template-columns: repeat(3, 1fr);
-	gap: 20px;
-	padding: 0;
-	justify-content:space-between;
+	grid-template-columns: repeat(3, 370px);
+	gap: 30px;
+	padding: 0;    
 }
-.product-item {
-    width: 370px;
-    height: 370px;
-    border: 1px solid #D5D5D5;
+.card-list-more-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+  }
+  
+  .card-list-more {
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+  }
+  
+  .card-list-more:hover {    
+        background-color: #8C2828;    
+  }
+  
+.card-list-more{
+    width: 177px;
+    height: 61px;
+    border: none;
+    border-radius: 4px;
+    background-color: #F14F4F;
+    color: #FFFFFF;
+    align-items: center;
+    justify-content: center;
+    margin: 20px;
 }
 
 /* @media (min-width: 780px) {
