--- a/src/components/CatalogItem/CatalogItem.css
+++ b/src/components/CatalogItem/CatalogItem.css
@@ -1,3 +1,22 @@
+.product-item {
+    max-width: 370px;
+    height: 370px;
+    border-radius: 6px;
+    border: 1px solid #D5D5D5;
+    box-sizing: border-box;
+}
+.product-imagebox{
+    position: relative;
+    cursor: pointer;
+}
+.show-details {
+    position: absolute;
+    top: 50%;
+    left: 25%;
+    font-weight: 800;
+    font-size: 26px;
+    line-height: 38px;
+}
 .product-card {
     display: grid;
     gap: 20px;
@@ -6,6 +25,7 @@
 .product-info {
     display: grid;    
     grid-template-rows: 1fr 1fr;
+    margin-left: 20px;
 }
 .product-name{
     margin: 0;
@@ -32,5 +52,51 @@
     border: none;border-radius: 4px;
     color: #FFFFFF;    
     background: url('../../assets/Vector.svg') 50% 50% #F14F4F no-repeat;
+    transition: background-color 0.3s;
     cursor: pointer;
 }
+.product-buy:hover {
+  background-color: #8C2828;
+}
+.product-buy:active {
+    background-color: #8C2828;
+}
+
+.product-item {
+    position: relative; 
+  }
+
+  .product-imagebox {
+    position: relative;
+    overflow: hidden; 
+  }
+
+  .product-image {
+    transition: opacity 0.3s ease;
+  }
+
+  .product-imagebox:hover .product-image {
+    opacity: 0.5; 
+  }
+
+  .hide-box {    
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(213, 213, 213, 0.5);
+    color: white;
+    font-size: 16px;
+    border-radius: 6px;
+    opacity: 0; 
+    transition: opacity 0.3s ease; 
+  }
+
+  .product-imagebox:hover .hide-box {
+    opacity: 1; 
+  }
