--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,12 +5,7 @@
     padding: 10px 100px;
     background-color: #484283;  
 }
-/* .logo-company {
-    background: url("../../assets/Logo.svg") no-repeat;
-    margin: 0px;
-    width: 164px;
-    height: 40px;
-} */
+
 .header-list {
     display: flex;
     flex-direction:row;
@@ -21,7 +16,7 @@
     align-items: center;
 }
 .header-item{
-    padding: 10px;
+    padding: 20px;
     text-decoration: none;
     color: #FFFFFF;    
 }
@@ -33,7 +28,25 @@
     color: gray;
 }
 .item-cart{
-
+    width: 30px;
+    height: 20px;
+    padding-left: 10px;
+    background: url('../../assets/Vector.svg') 100% 50% no-repeat;
+    cursor: pointer;
+}
+.count-product {
+    position: relative;
+    top: 30%;
+    left: 50%;
+    width: 140px;
+    height: 140px;
+    border-radius: 50%;
+    background-color: #F14F4F;
+    color: #FFFFFF;
+    font-weight: 400;
+    font-size: 6px;
+    line-height: 8px;
+    align-items: center;
 }
 .item-username{
 
