--- a/src/components/SearchInput/SearchInput.css
+++ b/src/components/SearchInput/SearchInput.css
@@ -1,4 +1,6 @@
-.search-input {
+
+.search-panel {
+    display: flex;
     width: 100%;
     height: 62px;
     margin: 20px 0;
@@ -7,8 +9,17 @@
     color: #B2B5BB;
     border-radius: 4px;
     background-color: #F6F6F6;
-    border:1px solid #F6F6F6;
-    padding: 0px 20px;
+    border:none;
+    padding: 0 20px; 
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+}
+.search-input {
+    width: 100%;
+    background-color: #F6F6F6;
+    border:none;
+    padding: 0;
 }
 .search-input:focus {
     outline: none;
