--- a/src/components/widget/Cart/Cart.css
+++ b/src/components/widget/Cart/Cart.css
@@ -70,6 +70,7 @@
     margin: 0;
     cursor: pointer;    
 }
+
 .count-input {
     width: 48px;
     height: 20px;
@@ -82,6 +83,11 @@
     background-color: #F14F4F;
     border-radius: 4px;
     border: none;
+    transition: background-color 0.3s;
+
+}
+.cart-minus-plus:hover {
+    background-color: #8C2828;
 }
 .button-plus {
     background: url("../../../assets/plus.svg") 50% 50% no-repeat #F14F4F
@@ -103,6 +109,11 @@
     border-radius: 4px;
     background: url('../../../assets/Vector.svg') 50% 50% no-repeat;
     background-color: #F14F4F;
+    transition: background-color 0.3s;
+
+}
+.button-cart:hover {
+    background-color: #8C2828;
 }
 .cart-description {
     width: 100%;
