--- a/src/components/widget/ProductPage/ProductPage.css
+++ b/src/components/widget/ProductPage/ProductPage.css
@@ -110,6 +110,7 @@
 }
 .price-oldprice {
     font-weight: 500;
+    margin-top: 10px;
     font-size: 16px;
     line-height: 20px;
     color:#6D727B;
@@ -132,4 +133,8 @@
     padding: 20px 50px;
     color: #FFFFFF;
     cursor: pointer;
+    transition: background-color 0.3s;
+}
+.button-buy:hover {
+    background-color: #8C2828;
 }
