--- a/src/components/Catalog/Catalog.css
+++ b/src/components/Catalog/Catalog.css
@@ -54,26 +54,42 @@
     margin: 20px;
 }
 
-/* @media (min-width: 780px) {
+@media (max-width: 768px) {
     .product-list {
         list-style: none;
         display: grid;
         width: 100%;
-        grid-template-columns: repeat(1, 1fr);
-        gap: 20px;
-        padding: 0;
-        justify-content:space-between;
+        grid-template-columns: repeat(2, 370px);
+        gap: 30px;
+        padding: 0;    
+    }
+    
+
+    .catalog-title {
+        font-size: 22px;
     }
 }
 
-@media (min-width: 360px) {
+/* Медиа-запросы для мобильных устройств */
+@media (max-width: 480px) {
     .product-list {
         list-style: none;
         display: grid;
         width: 100%;
-        grid-template-columns: repeat(1, 1fr);
-        gap: 20px;
-        padding: 0;
-        justify-content:space-between;
+        grid-template-columns: repeat(1, 370px);
+        gap: 30px;
+        padding: 0;    
     }
-} */
+    .product-list li {
+        width: 100%; /* Для мобильных устройств */
+    }
+
+    .catalog-title {
+        font-size: 20px;
+    }
+
+    .card-list-more {
+        font-size: 14px;
+        padding: 8px 16px;
+    }
+}
