--- a/src/components/SearchInput/SearchInput.css
+++ b/src/components/SearchInput/SearchInput.css
@@ -1,4 +1,3 @@
-
 .search-panel {
     display: flex;
     width: 100%;
@@ -9,20 +8,46 @@
     color: #B2B5BB;
     border-radius: 4px;
     background-color: #F6F6F6;
-    border:none;
+    border: none;
     padding: 0 20px; 
     justify-content: center;
     align-items: center;
     box-sizing: border-box;
 }
+
 .search-input {
     width: 100%;
     background-color: #F6F6F6;
-    border:none;
+    border: none;
     padding: 0;
 }
+
 .search-input:focus {
     outline: none;
     font-weight: 400;
     color: #444B58;
+}
+
+@media (max-width: 768px) {
+    .search-panel {
+        max-width: 700px;
+        height: 50px; 
+        font-size: 14px; 
+        padding: 0 15px; 
+    }
+    .search-input {
+        font-size: 14px; 
+    }
+}
+
+@media (max-width: 480px) {
+    .search-panel {
+        max-width: 400px;
+        height: 40px; 
+        font-size: 12px; 
+        padding: 0 10px; 
+    }
+    .search-input {
+        font-size: 12px; 
+    }
 }
