--- a/src/components/widget/Cart/Cart.css
+++ b/src/components/widget/Cart/Cart.css
@@ -51,11 +51,13 @@
     height: 100px;
     background-image: url('../../../assets/image.png');
 }
-.cart-product-title{
+.cart-product-title {
     font-weight: 600;
     font-size: 18px;
     color: #444B58;
+    text-decoration: none;
 }
+
 .cart-product-price{
     font-weight: 400;
     font-size: 16px;
