--- a/src/components/Catalog/Catalog.css
+++ b/src/components/Catalog/Catalog.css
@@ -70,7 +70,6 @@
     }
 }
 
-/* Медиа-запросы для мобильных устройств */
 @media (max-width: 480px) {
     .product-list {
         list-style: none;
@@ -81,7 +80,7 @@
         padding: 0;    
     }
     .product-list li {
-        width: 100%; /* Для мобильных устройств */
+        width: 100%; 
     }
 
     .catalog-title {
