--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -48,3 +48,16 @@
     line-height: 8px;
     align-items: center;
 }
+
+
+
+@media (max-width: 480px) {   
+   .header-menu{    
+    display: flex;
+    flex-direction: column;
+    margin: 0 100px;
+    padding: 10px 0;
+    justify-content:center;
+    align-items: center;
+}
+}
