--- a/src/components/Sale/Sale.css
+++ b/src/components/Sale/Sale.css
@@ -47,3 +47,36 @@
 .sale-buy:hover {
   background-color: #8C2828;
 }
+@media (max-width: 780px) {
+    .sale-title {
+        max-width: 80%;
+        height: auto;
+        font-weight: 400;
+        font-size: 26px;
+        color: #FFFFFF;
+    }
+    .sale-text{
+        max-width: 80%;
+        height: auto;
+        font-weight: 400;
+        font-size: 12px;
+        color: #FFFFFF;
+    }
+}
+
+@media (max-width: 480px) {   
+    .sale-title {
+        max-width: 80%;
+        height: auto;
+        font-weight: 300;
+        font-size: 12px;
+        color: #FFFFFF;
+    }
+    .sale-text{
+        max-width: 80%;
+        height: auto;
+        font-weight: 400;
+        font-size: 12px;
+        color: #FFFFFF;
+    }
+ }
