--- a/src/components/CatalogItem/CatalogItem.css
+++ b/src/components/CatalogItem/CatalogItem.css
@@ -23,7 +23,9 @@
 .product-card {
     display: grid;
     gap: 20px;
-    grid-template-columns: 1fr 60px;
+    grid-template-columns: 150px 200px;
+    align-items: center;
+    justify-content: space-between;
 }
 .product-info {
     display: grid;    
@@ -50,7 +52,7 @@
     color: #444B58;
 }
 .product-buy {
-    margin: 0;
+    margin-left: 140px;
     padding: 0;
     width: 50px;
     height: 50px;    
@@ -58,6 +60,7 @@
     color: #FFFFFF;    
     background: url('../../assets/Vector.svg') 50% 50% #F14F4F no-repeat;
     transition: background-color 0.3s;
+    transition: all 0.5s ease;
     cursor: pointer;
 }
 .product-buy:hover {
@@ -105,3 +108,27 @@
 .product-imagebox:hover .hide-box {
     opacity: 1; 
   }
+  .count-buttons{
+    transition: all 0.5s ease;
+  }
+  .cart-minus-plus{
+    width: 50px;
+    height: 50px;
+    background-color: #F14F4F;
+    border-radius: 4px;
+    border: none;
+    transition: background-color 0.3s;
+
+}
+.count-input {
+  
+}
+.cart-minus-plus:hover {
+    background-color: #8C2828;
+}
+.button-plus {
+    background: url("../../../assets/plus.svg") 50% 50% no-repeat #F14F4F
+}
+.button-minus {
+    background: url("../../../assets/minus.svg") 50% 50% no-repeat #F14F4F
+}
