--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,4 +1,12 @@
+@font-face {
+    font-family: 'Jost';
+    font-style:  normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url('../../assets/fonts/Jost-Regular.ttf') format("ttf");
+  }
 body {
+    font: 14px 'Jost', Helvetica, Arial, sans-serif;
     margin: 0;
     display: flex; 
     flex-direction: column; 
