--- a/src/widget/Cart/Cart.css
+++ b/src/widget/Cart/Cart.css
@@ -102,10 +102,10 @@
     background-color: #8C2828;
 }
 .button-plus {
-    background: url("../../../assets/plus.svg") 50% 50% no-repeat #F14F4F
+    background: url("../../assets/plus.svg") 50% 50% no-repeat #F14F4F;
 }
 .button-minus {
-    background: url("../../../assets/minus.svg") 50% 50% no-repeat #F14F4F
+    background: url("../../assets/minus.svg") 50% 50% no-repeat #F14F4F;
 }
 .cart-delete {
     background-color: inherit;
@@ -119,7 +119,8 @@
     width: 50px;
     height: 50px;
     border-radius: 4px;
-    background: url('../../../assets/Vector.svg') 50% 50% no-repeat;
+    margin-left: 140px;
+    background: url('../../assets/Vector.svg') 50% 50% no-repeat;
     background-color: #F14F4F;
     transition: background-color 0.3s;
 
