--- a/src/share/atom/Button/Button.css
+++ b/src/share/atom/Button/Button.css
@@ -3,8 +3,8 @@
     border:none;
     color: #FFFFFF;    
     border-radius: 4px;
-    width: 50px;
-    height: 50px;
+    min-width:  50px;
+    min-height: 50px;
     cursor: pointer;  
     transition: background-color 0.3s ease;
 }
