--- a/src/widget/App/App.css
+++ b/src/widget/App/App.css
@@ -10,6 +10,10 @@ body {
     margin: 0;
     display: flex; 
     flex-direction: column; 
+    min-height: 100vh; 
+}
+main {
+    flex-grow: 1;
 }
 .logo-company {
     background: url("../../assets/Logo.svg") no-repeat;
