--- a/src/widget/CatalogItem/CatalogItem.css
+++ b/src/widget/CatalogItem/CatalogItem.css
@@ -43,7 +43,7 @@
 .product-name{
     margin: 0;
     padding: 0;
-    width: 200px;
+    max-width: 200px;
     height: 20px;
     font-weight: 600;
     font-size: 16px;
