--- a/src/widget/NotFound/NotFound..css
+++ b/src/widget/NotFound/NotFound..css
@@ -1,9 +1,14 @@
 .not-fount-container {
+width: 100%;
+height: 80vh;
 display: flex;
 justify-content: center;
 align-items: center;
 }
 
-.not-fount-title {
-
+.not-found-box {
+    width: 300px;
+}
+.not-found-title {    
+    color: red;
 }
