--- a/src/widget/Header/Header.css
+++ b/src/widget/Header/Header.css
@@ -5,46 +5,29 @@
     padding: 10px 100px;
     background-color: #484283;  
 }
-
-.header-list {
-    display: flex;
-    flex-direction:row;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    justify-content: end;
-    align-items: center;
-}
-.header-item{
-    padding: 20px;
-    text-decoration: none;
-    color: #FFFFFF;    
-}
-.header-link {
-    text-decoration: none;
-    color:#FFFFFF;
-}
 .header-link:hover {
     color: gray;
 }
 .item-cart{
     width: 30px;
-    height: 20px;
+    height:auto;
     padding-left: 10px;
     background: url('../../assets/Vector.svg') 100% 50% no-repeat;
     cursor: pointer;
+    margin-right: 20px;
 }
 .count-product {
-    position: relative;
-    top: 30%;
-    left: 50%;
-    width: 140px;
-    height: 140px;
+    position: absolute;
+    display: flex;
+    top: 50%;
+    left: 90%;
+    width: 15px;
+    height: 15px;
     border-radius: 50%;
     background-color: #F14F4F;
     color: #FFFFFF;
     font-weight: 400;
-    font-size: 6px;
+    font-size: 9px;
     line-height: 8px;
     align-items: center;
 }
