--- a/src/share/spiner/spiner.css
+++ b/src/share/spiner/spiner.css
@@ -17,9 +17,9 @@
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    border-top: 1px solid blue;
-    border-bottom: 1px solid red;
-    animation: spin 1.2s linear infinite; /* Добавляем анимацию */
+    border-top: 10px solid blue;
+    border-bottom: 10px solid red;
+    animation: spin 1.2s linear infinite; 
   }
   
   @keyframes spin {
